force-app/main/default/objects/Item_Master_Subscription_Link__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>Product_Master_to_Product_Links</relationshipName>
    <type>Lookup</type>
</CustomField>